# BoBanana5

./: .gitignore  .grill-report.json  .mcp.json  Bobanana.md  README.md  README.quick.md  bobanana.bat  bobanana.py  gui_dashboard.py  handoff_ticket.py  hr_recruitment.py  install.bat  mcp_client.py  mcp_events.py  mcp_server.py  pipeline_orchestrator.py  plugin_fix.py  plugin_refresh.py  plugin_register.py  reasonix.toml  role_tag_system.py  settings.json  state-machine.schema.yaml  state-machine.yaml  state_machine_engine.py  state_machine_parser.py
.github/workflows/: ci.yml  publish.yml
bobanana-plugin/: reasonix-plugin.json
bobanana-plugin/commands/: cycle.md
bobanana-plugin/hooks/: check_mcp.py  launch_dashboard.bat
commands/: bb.md  bobanana.md  cycle.md
docs/adr/: 001-pipeline-workspace-isolation.html  001-schedule-as-mcp-tools.html  002-godot-kitset-architecture.html
docs/changelog/: pipeline-auto-advance-fix.html  v1.html
docs/cr/: backend-dev-schedule-review.html  code-review.html  super-cr-delivery.html  super-cr-python-review.html
docs/critique/: round1-arch.html
docs/examples/: state-machine-ai-native.yaml  state-machine-chaos-ready.yaml  state-machine-data-science.yaml  state-machine-fullstack-chaos.yaml  state-machine-fullstack-web.yaml  state-machine-game-dev.yaml  state-machine-game.yaml  state-machine-microservices.yaml  state-machine-ml.yaml  (+5 more)
eui_neo_app/: CMakeLists.txt  build.bat
hooks/: check_mcp.py
kitsets/: kitset_discovery.py
scripts/: gen_game_roles.py  generate_state_machine.py  pipeline_scheduler.py  pre-commit  pre_boss_check.py  role_usage.py  update_game_standards.py  verify_registry.py
tests/: test_pipeline_workspace.py  test_scheduler_api.py
(+457 files in other folders)
